# The-Bor-Programming-Langage

./: .gitignore  CMakeLists.txt  README.MD  bor.cpp  context.h  interpreter.cpp  interpreter.h  parser.c  transformer.cpp  transformer.h
nodes/: SubOperator.h  addOperator.cpp  addOperator.h  block.cpp  block.h  divideOperator.cpp  divideOperator.h  multiplyOperator.cpp  multiplyOperator.h  node.h  operators.cpp  operators.h  subOperator.cpp
tree_sitter/: CMakeLists.txt  api.h  parser.h
